Day8 - # Business Case Example 90%
Will update this business case one more time later today to get better accuracy, also tried early stopping for the MNIST example from the days 4-5-6.

--- a/TensorFlow_Audiobooks_Preprocessing_with_comments.ipynb
+++ b/TensorFlow_Audiobooks_Preprocessing_with_comments.ipynb
@@ -52,10 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -73,7 +71,7 @@
     "unscaled_inputs_all = raw_csv_data[:,1:-1]\n",
     "\n",
     "# The targets are in the last column. That's how datasets are conventionally organized.\n",
-    "targets_all = raw_csv_data[:,-1]"
+    "targets_all = raw_csv_data[:,-1]\n"
    ]
   },
   {
@@ -85,10 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Count how many targets are 1 (meaning that the customer did convert)\n",
@@ -124,10 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# That's the only place we use sklearn functionality. We will take advantage of its preprocessing capabilities\n",
@@ -135,6 +129,38 @@
     "# At the end of the business case, you can try to run the algorithm WITHOUT this line of code. \n",
     "# The result will be interesting.\n",
     "scaled_inputs = preprocessing.scale(unscaled_inputs_equal_priors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.21053387, -0.18888517,  1.97823887, ...,  4.80955413,\n",
+       "        11.83828419,  0.09415043],\n",
+       "       [ 1.27894497,  0.41646744, -0.39082475, ..., -0.41569922,\n",
+       "        -0.20183481, -0.80255852],\n",
+       "       [ 1.27894497,  0.41646744, -0.39082475, ..., -0.41569922,\n",
+       "        -0.20183481,  2.979214  ],\n",
+       "       ...,\n",
+       "       [ 1.27894497,  0.41646744, -0.39082475, ..., -0.41569922,\n",
+       "        -0.20183481, -0.7440775 ],\n",
+       "       [ 0.31737498,  1.7482432 ,  0.04679395, ..., -0.41569922,\n",
+       "        -0.20183481, -0.80255852],\n",
+       "       [ 0.31737498,  1.7482432 , -0.39082475, ..., -0.41569922,\n",
+       "        -0.20183481, -0.80255852]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_inputs"
    ]
   },
   {
@@ -146,21 +172,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   0    1    2 ... 4471 4472 4473]\n",
+      "[[-0.64419501 -0.67316726 -0.39082475 ...  3.02909743 -0.20183481\n",
+      "   0.79592265]\n",
+      " [ 0.21053387 -0.18888517 -0.39082475 ... -0.41569922 -0.20183481\n",
+      "  -0.80255852]\n",
+      " [ 1.27894497  0.41646744  0.39886313 ... -0.34532544 -0.20183481\n",
+      "  -0.12027997]\n",
+      " ...\n",
+      " [-1.71260612 -1.27851988  0.04679395 ...  0.04876774 -0.20183481\n",
+      "   1.14680876]\n",
+      " [ 1.27894497  0.41646744  0.01059992 ... -0.41569922 -0.20183481\n",
+      "  -0.75382433]\n",
+      " [-0.64419501 -0.67316726 -0.39082475 ... -0.41569922 -0.20183481\n",
+      "   0.17212512]]\n",
+      "[0. 1. 0. ... 0. 1. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# When the data was collected it was actually arranged by date\n",
     "# Shuffle the indices of the data, so the data is not arranged in any way when we feed it.\n",
     "# Since we will be batching, we want the data to be as randomly spread out as possible\n",
     "shuffled_indices = np.arange(scaled_inputs.shape[0])\n",
+    "print(shuffled_indices)\n",
     "np.random.shuffle(shuffled_indices)\n",
     "\n",
     "# Use the shuffled indices to shuffle the inputs and targets.\n",
     "shuffled_inputs = scaled_inputs[shuffled_indices]\n",
-    "shuffled_targets = targets_equal_priors[shuffled_indices]"
+    "shuffled_targets = targets_equal_priors[shuffled_indices]\n",
+    "print(shuffled_inputs)\n",
+    "print(shuffled_targets)\n",
+    "\n"
    ]
   },
   {
@@ -172,11 +222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1801.0 3579 0.5032131880413523\n",
+      "220.0 447 0.49217002237136465\n",
+      "216.0 448 0.48214285714285715\n"
+     ]
+    }
+   ],
    "source": [
     "# Count the total number of samples\n",
     "samples_count = shuffled_inputs.shape[0]\n",
@@ -225,10 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save the three datasets in *.npz.\n",
@@ -238,13 +294,20 @@
     "np.savez('Audiobooks_data_validation', inputs=validation_inputs, targets=validation_targets)\n",
     "np.savez('Audiobooks_data_test', inputs=test_inputs, targets=test_targets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:anaconda3-jan4]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda3-jan4-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -256,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
