--- a/TensorFlow_MNIST_All_Exercises.ipynb
+++ b/TensorFlow_MNIST_All_Exercises.ipynb
@@ -348,12 +348,13 @@
    "source": [
     "# determine the maximum number of epochs\n",
     "NUM_EPOCHS = 5\n",
+    "early_stopping = tf.keras.callbacks.EarlyStopping(patience=2)\n",
     "\n",
     "# we fit the model, specifying the\n",
     "# training data\n",
     "# the total number of epochs\n",
     "# and the validation data we just created ourselves in the format: (inputs,targets)\n",
-    "model.fit(train_data, epochs=NUM_EPOCHS, validation_data=(validation_inputs, validation_targets), verbose =2)"
+    "model.fit(train_data, epochs=NUM_EPOCHS, validation_data=(validation_inputs, validation_targets), callbacks=early_stopping verbose =2)"
    ]
   },
   {
