--- a/TensorFlow_Audiobooks_Preprocessing_Exercise.ipynb
+++ b/TensorFlow_Audiobooks_Preprocessing_Exercise.ipynb
@@ -33,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -58,6 +56,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Since we will be batching, we want the data to be as randomly spread out as possible\n",
+    "shuffled_indices = np.arange(unscaled_inputs_all.shape[0])\n",
+    "np.random.shuffle(shuffled_indices)\n",
+    "\n",
+    "# Use the shuffled indices to shuffle the inputs and targets.\n",
+    "shuffled_inputs = unscaled_inputs_all[shuffled_indices]\n",
+    "shuffled_targets = targets_all[shuffled_indices]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,10 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Count how many targets are 1 (meaning that the customer did convert)\n",
@@ -105,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# That's the only place we use sklearn functionality. We will take advantage of its preprocessing capabilities\n",
@@ -127,10 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# When the data was collected it was actually arranged by date\n",
@@ -153,11 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1796.0 3579 0.5018161497625034\n",
+      "230.0 447 0.5145413870246085\n",
+      "211.0 448 0.47098214285714285\n"
+     ]
+    }
+   ],
    "source": [
     "# Count the total number of samples\n",
     "samples_count = shuffled_inputs.shape[0]\n",
@@ -206,10 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save the three datasets in *.npz.\n",
@@ -219,13 +232,20 @@
     "np.savez('Audiobooks_data_validation', inputs=validation_inputs, targets=validation_targets)\n",
     "np.savez('Audiobooks_data_test', inputs=test_inputs, targets=test_targets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:anaconda3-jan4]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda3-jan4-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -237,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
