Day62 - # Sample Interview Qs for Scale - 7 of them completed

--- a/IntSampleQ.ipynb
+++ b/IntSampleQ.ipynb
@@ -374,6 +374,196 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LongestStreak:\n",
+    "\n",
+    "You are an employer, and want to keep track of your employees’ attendance. You have data corresponding to each day in the form of 'YN' where Y indicates that indexed employee was present while N indicates they werent.\n",
+    "\n",
+    "Implement a function named longestStreak(m,data), where m is the number of employees, and data contains an array of strings made up of Y or Ns.\n",
+    "\n",
+    "this function should find the longest consecutive  back to back streak of [DAYS where EVERY  employees came to work.]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findLongestStreak(m,data):\n",
+    "    streak = 0\n",
+    "    longest_streak = 0\n",
+    "    \n",
+    "    for i in data:\n",
+    "        if \"N\" not in i:\n",
+    "            streak += 1\n",
+    "        elif streak > longest_streak:\n",
+    "            longest_streak = streak\n",
+    "        else:\n",
+    "            streak = 0\n",
+    "        \n",
+    "    if streak > longest_streak:\n",
+    "            longest_streak = streak\n",
+    "    return longest_streak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [\"YNY\", \"YYY\", \"YNN\", \"NYY\", \"NNN\", \"YYY\", \"YYY\", \"YYY\", \"YNY\", \"YYN\", \"YNN\", \"YYY\", \"YYY\", \"NYY\", \"YNY\", \n",
+    "       \"YYY\", \"YYY\", \"NNN\", \"YYY\", \"YYY\"]\n",
+    "findLongestStreak(len(arr[0]), arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reassign\n",
+    "\n",
+    "Reassigning priority.\n",
+    "\n",
+    "You run a store with products. Each product has a product id.\n",
+    "\n",
+    "You used to have a lot of products, so each product id number was very high, like 2913712 or 1203814\n",
+    "\n",
+    "Now, you have less products, and want to reassign the numbers. Create a function that reassigns the numbers for each product, while keeping the same order between products. You want to minimize every number as much as possible.\n",
+    "    \n",
+    "data = [1,3,7,3]\n",
+    "\n",
+    "new_data = reassign(data)\n",
+    "new_data = [1,2,3,2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reassign(data):\n",
+    "    ordered_list = sorted(set(data))\n",
+    "    #print(ordered_list)\n",
+    "    ordered_dict = {ordered_list[k]: k+1 for k in range(len(ordered_list))}\n",
+    "    #print(ordered_dict)\n",
+    "    new_data = [ordered_dict[i] for i in data]\n",
+    "\n",
+    "    return new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 2, 3, 2]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [1,8,3,7,3]\n",
+    "reassign(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GridWalk\n",
+    "\t\n",
+    "\tGiven a square grid and an array of commands, consisting of either LEFT, UP, DOWN or RIGHT, what is the end position, if we start at coordinates x, y? GridWalk(coords,  commands, gridSize)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gridWalk(coords, commands, gridSize):\n",
+    "    step = 1\n",
+    "    for i in commands:\n",
+    "        if i == \"LEFT\":\n",
+    "            coords = (coords[0]-1, coords[1])\n",
+    "        elif i == \"RIGHT\":\n",
+    "            coords = (coords[0]+1, coords[1])\n",
+    "        elif i == \"UP\":\n",
+    "            coords = (coords[0], coords[1]+1)\n",
+    "        else:\n",
+    "            coords = (coords[0], coords[1]-1)\n",
+    "            \n",
+    "        \n",
+    "        if (gridSize+1) in coords or 0 in coords:\n",
+    "            print(\"Out of the grid\")\n",
+    "            return None\n",
+    "        print(f\"I am in {coords} coordinates in the step {step}\")\n",
+    "        step += 1\n",
+    "    \n",
+    "    return coords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am in (2, 4) coordinates in the step 1\n",
+      "I am in (3, 4) coordinates in the step 2\n",
+      "I am in (3, 3) coordinates in the step 3\n",
+      "I am in (3, 2) coordinates in the step 4\n",
+      "I am in (3, 1) coordinates in the step 5\n",
+      "I am in (4, 1) coordinates in the step 6\n",
+      "I am in (4, 2) coordinates in the step 7\n",
+      "I am in (5, 2) coordinates in the step 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coord = (3,4)\n",
+    "commands = (\"LEFT\", \"RIGHT\", \"DOWN\", \"DOWN\", \"DOWN\", \"RIGHT\", \"UP\", \"RIGHT\")\n",
+    "gridSize = 5\n",
+    "\n",
+    "gridWalk(coord, commands, gridSize)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
